<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradiant"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".LoginActivity">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_login_form"
        android:orientation="vertical"
        >
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:hint="@string/email"
            android:autofillHints="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/password"
            android:autofillHints="@string/password"

            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginTop="10dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:background="@android:color/transparent"
            android:id="@+id/email_sign_in_button"
            android:layout_marginTop="10dp"
            android:textColor="#EE0030"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/create_acct_button"
            android:background="@android:color/transparent"
            android:textColor="#EE0030"
            android:text="@string/create_account"
            />

    </LinearLayout>

</LinearLayout>