<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiant"
    tools:context=".PostJournalActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="280dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        app:cardBackgroundColor="@color/yellowBg"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/background_image"
            android:src="@drawable/cool_background"
            android:scaleType="centerCrop">

        </ImageView>

        <ImageView
            android:id="@+id/postCameraButton"
            android:layout_width="84dp"
            android:layout_height="76dp"
            android:layout_gravity="center"
            app:srcCompat="@android:drawable/ic_menu_camera"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/post_username_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/textview"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#070707"
            android:textSize="21sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/post_date_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="10dp"
            android:text="@string/today"
            android:textColor="#070707"
            android:textStyle="italic" />
    </androidx.cardview.widget.CardView>


    <EditText
        android:id="@+id/post_thought_et"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/your_thoughts"
        android:background="@drawable/input_outkine"
        android:ems="10"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:hint="@string/your_thoughts"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_title_et" />


    <EditText
        android:id="@+id/post_title_et"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
         android:background="@drawable/input_outkine"
        android:autofillHints="@string/title"
        android:ems="10"
        android:hint="@string/title"
        android:padding="10dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <ProgressBar
        android:id="@+id/post_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="81dp"
        android:layout_height="60dp"
        android:layout_marginTop="96dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_thought_et" />

    <Button
        android:id="@+id/post_save"
        android:layout_width="381dp"
        android:layout_height="49dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:text="@string/save"
        android:textColor="#DF091D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_thought_et"
        app:layout_constraintVertical_bias="0.948" />

</androidx.constraintlayout.widget.ConstraintLayout>