<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="18dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/gradiant"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/bangers"
        android:text="@string/self_gratitude_journal"
        android:textSize="40sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativelayoute"
        android:layout_gravity="center_horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/gratefulText"
         android:text="@string/what_are_you_grateful_for_today"
         android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>
    </RelativeLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:id="@+id/startButton"
        android:textColor="#EE0053"
        android:background="@android:color/transparent"/>
</LinearLayout>